Added extra style to contact form, sorted check list layout

--- a/special-occasions.html
+++ b/special-occasions.html
@@ -12,7 +12,8 @@
     <title>Platinum Limo - Chauffeur Services</title>
 
     <!-- Google Fonts -->
-    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Spectral:wght@300&display=swap">
+    <link link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Spectral:wght@300&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -87,43 +88,62 @@
                     </div>
 
                     <div class="mt-4 services-checklist">
-                        <div>
-                            <i class="fa fas fa-check mt-2"></i>
-                            <span>
+                        <div class="row">
+                            <div class="col-1">
 
-                                <p class="pl-2">SUPERIOR SERVICE FOR ANY SIZE EVENT</p>
-                            </span>
+                                <i class="fa fas fa-check mt-2"></i>
+                            </div>
+
+                            <div class="col-11">
+
+                                <p>SUPERIOR SERVICE FOR ANY SIZE EVENT</p>
+                            </div>
+
+
                         </div>
 
-                        <div>
-                            <div>
+                        <div class="row">
+                            <div class="col-1">
 
                                 <i class="fa fas fa-check mt-3"></i>
                             </div>
-                            <div>
+                            <div class="col-11">
 
-                                <p class="pl-2">LUXURY, MEETS COMFORT, WITH OUR VEHICLES TAILORED TO ALL NEEDS</p>
+                                <p>LUXURY, MEETS COMFORT, WITH OUR VEHICLES TAILORED TO ALL NEEDS</p>
                             </div>
                         </div>
 
-                        <div>
-                            <i class="fa fas fa-check mt-3"></i>
-                            <p class="d-inline pl-2">PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS FOR
-                                THE DAY</p>
+                        <div class="row">
+                            <div class="col-1">
+                                <i class="fa fas fa-check mt-3"></i>
+                            </div>
+
+                            <div class="col-11">
+                                <p class="d-inline pl-2">PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS
+                                    FOR
+                                    THE DAY</p>
+                            </div>
                         </div>
 
-                        <div>
-                            <i class="fa fas fa-check mt-3"></i>
-                            <p class="d-inline pl-2">COMPLIMENTARY WATER ON BOARD</p>
+                        <div class="row">
+
+                            <div class="col-1">
+                                <i class="fa fas fa-check mt-3"></i>
+                            </div>
+                            <div class="col-11">
+                                <p class="d-inline pl-2">COMPLIMENTARY WATER ON BOARD</p>
+                            </div>
+
+
                         </div>
 
 
                     </div>
 
                 </div>
-                <div class="col-sm-12 col-md-4 border border-rounded p-3">
+                <div class="col-sm-12 col-md-4 border-color p-3">
                     <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
-                        <input type="hidden" name="subject" value="Contact Form">
+                        <input type="hidden" name="subject" value="Contact Form - Special Occassions">
                         <div class="form-group ml-4">
                             <div class="field">
                                 <!-- Full Name -->
@@ -256,7 +276,7 @@
         integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"
         link="preload">
         </script>
-        <script src="assets/script.js"></script>
+    <script src="assets/script.js"></script>
 
 </body>
 
