Tours page created

--- a/tours.html
+++ b/tours.html
@@ -50,10 +50,10 @@
                             <li><a class="dropdown-item" href="special-occasions.html">Special Occasions</a></li>
                             <li><a class="dropdown-item " href="events.html">Events</a></li>
                             <li><a class="dropdown-item" href="airport-transfer.html">Airport Transfer</a></li>
-                            <li><a class="dropdown-item active" href="conference-conventions.html">Conference & Conventions</a>
+                            <li><a class="dropdown-item" href="conference-conventions.html">Conference & Conventions</a>
                             </li>
                             <li><a class="dropdown-item" href="corporate.html">Corporate Service</a></li>
-                            <li><a class="dropdown-item" href="tours.html">Luxury Tours</a></li>
+                            <li><a class="dropdown-item active" href="tours.html">Luxury Tours</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="our-fleet.html">Our Fleet</a></li>
@@ -65,9 +65,9 @@
     </nav>
 
     <!-- Header image -->
-    <header class="header-services conference-header">
+    <header class="header-services tours-header">
         <div class="container">
-            <div class="heading">Conference & Conventions</div>
+            <div class="heading">Luxury Tours</div>
 
         </div>
     </header>
@@ -75,90 +75,23 @@
     <section class="page-section pt-5">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-8">
-                    <div class="text-left mb-5 services-subtitle"> Experience Dublin's Finest Business Chauffeur
-                        Services  </div>
-                    <div>We are here to facilitate your stay and bring you around the city and wider area, in the style
-                        you are used to. Our chauffeurs will look after you and adapt to your need. We have the
-                        capacity, knowledge and experience to look after all your needs and ensure your business
-                        activities run uninterrupted. Business travelers face tight schedules and pressing deadlines and
-                        our team of transportation experts come to their rescue. Platinum Limo provides supportive and
-                        dependable corporate chauffeur service for a wide range of business clients. Traveling to
-                        conferences, forums, meetings, seminars and other corporate events? We invite you to step on
-                        board our vehicles to experience Dublin's finest business chauffeur services as have thousands
-                        of business leaders and eminent corporate individuals.
-                        <br> <br>
+                <div class="col-sm-12 col-md-8 mb-5">
+                    <div class="text-left mb-5 services-subtitle"> A Unique Way to Explore and Expereience Ireland</div>
+                    <div>Ireland is world famous for its beautiful nature, fantastic scenery, old castles, Guinness and
+                        pubs, famous writers and of course its hospitality. If you decide to visit this extraordinary
+                        country, we can help you plan an itinerary for your best holiday ever. From Glendalough and
+                        Wicklow Mountains to Giant's Causeway or the Cliffs of Moher, experience the spectacular scenery
+                        of Ireland on these majestic and luxurious private day tours. Our private tours offer a unique
+                        perspective on Irish history by combining first class luxury with chauffeur guided commentary,
+                        giving you an experience that truly is the best of both worlds. <br> <br>
                         For a reliable and professional chauffeur service, look no further than the
                         experts at Platinum Limo, for more information or to get a quotation, please fill out the form.
-                    </div>
-
-                    <div class="mt-4 services-checklist">
-                        <div class="row">
-                            <div class="col-1">
-
-                                <i class="fa fas fa-check mt-2"></i>
-                            </div>
-
-                            <div class="col-11">
-
-                                <p>WORKING WITH BUSINESSES TO MANAGE AND PROVIDE ALL TRAVEL ARRANGEMENTS TO AND FROM CORPORATE EVENTS</p>
-                            </div>
-
-
-                        </div>
-
-                        <div class="row">
-                            <div class="col-1">
-
-                                <i class="fa fas fa-check mt-3"></i>
-                            </div>
-                            <div class="col-11">
-
-                                <p>GROUP OR INDIVIDUAL TRANSFERS, TO AND FROM, AIRPORTS AND HOTELS</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
-                            </div>
-
-                            <div class="col-11">
-                                <p class="d-inline pl-2">EXECUTIVE CHAUFFEURS WHO KEEP TRACK OF FLIGHT INFORMATION</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-
-                            <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
-                            </div>
-                            <div class="col-11">
-                                <p class="d-inline pl-2">PROFESSIONAL SIGNAGE AND A COURTEOUS GREETING</p>
-                            </div>
-
-
-                        </div>
-
-                        <div class="row">
-
-                            <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
-                            </div>
-                            <div class="col-11">
-                                <p class="d-inline pl-2">FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
-                            </div>
-
-
-                        </div>
-
-
                     </div>
 
                 </div>
                 <div class="col-sm-12 col-md-4 border-color p-3">
                     <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
-                        <input type="hidden" name="subject" value="Contact Form - Conference">
+                        <input type="hidden" name="subject" value="Contact Form - Tours">
                         <div class="form-group ml-4">
                             <div class="field">
                                 <!-- Full Name -->
