--- a/corporate.html
+++ b/corporate.html
@@ -50,9 +50,9 @@
                             <li><a class="dropdown-item" href="special-occasions.html">Special Occasions</a></li>
                             <li><a class="dropdown-item " href="events.html">Events</a></li>
                             <li><a class="dropdown-item" href="airport-transfer.html">Airport Transfer</a></li>
-                            <li><a class="dropdown-item active" href="conference-conventions.html">Conference & Conventions</a>
+                            <li><a class="dropdown-item" href="conference-conventions.html">Conference & Conventions</a>
                             </li>
-                            <li><a class="dropdown-item" href="corporate.html">Corporate Service</a></li>
+                            <li><a class="dropdown-item active" href="corporate.html">Corporate Service</a></li>
                             <li><a class="dropdown-item" href="tours.html">Luxury Tours</a></li>
                         </ul>
                     </li>
@@ -65,9 +65,9 @@
     </nav>
 
     <!-- Header image -->
-    <header class="header-services conference-header">
+    <header class="header-services corporate-header">
         <div class="container">
-            <div class="heading">Conference & Conventions</div>
+            <div class="heading">Corporate Service</div>
 
         </div>
     </header>
@@ -76,18 +76,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-8">
-                    <div class="text-left mb-5 services-subtitle"> Experience Dublin's Finest Business Chauffeur
-                        Services  </div>
-                    <div>We are here to facilitate your stay and bring you around the city and wider area, in the style
-                        you are used to. Our chauffeurs will look after you and adapt to your need. We have the
-                        capacity, knowledge and experience to look after all your needs and ensure your business
-                        activities run uninterrupted. Business travelers face tight schedules and pressing deadlines and
-                        our team of transportation experts come to their rescue. Platinum Limo provides supportive and
-                        dependable corporate chauffeur service for a wide range of business clients. Traveling to
-                        conferences, forums, meetings, seminars and other corporate events? We invite you to step on
-                        board our vehicles to experience Dublin's finest business chauffeur services as have thousands
-                        of business leaders and eminent corporate individuals.
-                        <br> <br>
+                    <div class="text-left mb-5 services-subtitle"> Experience Reliability and Exquisite Service</div>
+                    <div>Platinum Limo guarantees your company reliability and exquisite service. Our professional
+                        chauffeurs are well-dressed, knowledgeable and discreet. They will make your journey
+                        comfortable, quick and trouble-free. If you are looking to deal with us don't hesitate to
+                        contact us for special corporate rates for frequent service. <br> <br>
                         For a reliable and professional chauffeur service, look no further than the
                         experts at Platinum Limo, for more information or to get a quotation, please fill out the form.
                     </div>
@@ -101,7 +94,8 @@
 
                             <div class="col-11">
 
-                                <p>WORKING WITH BUSINESSES TO MANAGE AND PROVIDE ALL TRAVEL ARRANGEMENTS TO AND FROM CORPORATE EVENTS</p>
+                                <p>WORKING WITH BUSINESSES TO MANAGE AND PROVIDE ALL TRAVEL ARRANGEMENTS TO AND FROM
+                                    CORPORATE EVENTS</p>
                             </div>
 
 
@@ -124,20 +118,8 @@
                             </div>
 
                             <div class="col-11">
-                                <p class="d-inline pl-2">EXECUTIVE CHAUFFEURS WHO KEEP TRACK OF FLIGHT INFORMATION</p>
+                                <p class="d-inline pl-2">TRANSPORT TO AND FROM, CONFERENCES WITH MANAGEMENT OF LOGISTICS</p>
                             </div>
-                        </div>
-
-                        <div class="row">
-
-                            <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
-                            </div>
-                            <div class="col-11">
-                                <p class="d-inline pl-2">PROFESSIONAL SIGNAGE AND A COURTEOUS GREETING</p>
-                            </div>
-
-
                         </div>
 
                         <div class="row">
@@ -158,7 +140,7 @@
                 </div>
                 <div class="col-sm-12 col-md-4 border-color p-3">
                     <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
-                        <input type="hidden" name="subject" value="Contact Form - Conference">
+                        <input type="hidden" name="subject" value="Contact Form - Corporate Service">
                         <div class="form-group ml-4">
                             <div class="field">
                                 <!-- Full Name -->
