Header images replaces, border shadow added to form

--- a/airport-transfer.html
+++ b/airport-transfer.html
@@ -75,8 +75,8 @@
     <section class="page-section pt-5">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-8">
-                    <div class="text-left mb-5 services-subtitle"> Style and Comfort From Your Front Door </div>
+                <div class="col-sm-12 col-md-8 mb-4">
+                    <div class="text-left mb-5 services-subtitle mb-4"> Style and Comfort From Your Front Door </div>
                     <div>Our professional and experienced chauffeurs will transfer you to the airport or from the
                         airport to your holiday or business destination in style. Avoid the hassle of taxi lanes and
                         crowded buses. We insure your driver has up to date information on any delays, diversions or
@@ -143,8 +143,8 @@
                     </div>
 
                 </div>
-                <div class="col-sm-12 col-md-4 border-color p-3">
-                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
+                <div class="col-sm-12 col-md-4">
+                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true" class="border-color p-3">
                         <input type="hidden" name="subject" value="Contact Form - Events">
                         <div class="form-group ml-4">
                             <div class="field">
@@ -170,7 +170,7 @@
                                 <div data-netlify-recaptcha="true"></div>
                             </div>
 
-                            <button type="submit" class="btn btn-dark text-uppercase mt-3 w-100">Send</button>
+                            <button type="submit" class="btn button-style text-uppercase mt-3 w-100">Send</button>
                         </div>
                     </form>
                 </div>
