--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                                 <div data-netlify-recaptcha="true"></div>
                             </div>
 
-                            <button type="submit" class="btn btn-dark text-uppercase mt-3 w-100">Send</button>
+                            <button type="submit" class="btn button-style text-uppercase mt-3 w-100">Send</button>
                         </div>
                     </form>
 
