--- a/availability.html
+++ b/availability.html
@@ -161,7 +161,7 @@
                                 <div data-netlify-recaptcha="true"></div>
                             </div>
 
-                            <button type="submit" class="btn btn-dark text-uppercase mt-5">Request Availability</button>
+                            <button type="submit" class="btn button-style text-uppercase mt-5">Request Availability</button>
                         </div>
                     </form>
                 </div>
