--- a/corporate.html
+++ b/corporate.html
@@ -75,7 +75,7 @@
     <section class="page-section pt-5">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-8">
+                <div class="col-sm-12 col-md-8 mb-4">
                     <div class="text-left mb-5 services-subtitle"> Experience Reliability and Exquisite Service</div>
                     <div>Platinum Limo guarantees your company reliability and exquisite service. Our professional
                         chauffeurs are well-dressed, knowledgeable and discreet. They will make your journey
@@ -138,8 +138,8 @@
                     </div>
 
                 </div>
-                <div class="col-sm-12 col-md-4 border-color p-3">
-                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
+                <div class="col-sm-12 col-md-4">
+                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true" class="border-color p-3">
                         <input type="hidden" name="subject" value="Contact Form - Corporate Service">
                         <div class="form-group ml-4">
                             <div class="field">
@@ -165,7 +165,7 @@
                                 <div data-netlify-recaptcha="true"></div>
                             </div>
 
-                            <button type="submit" class="btn btn-dark text-uppercase mt-3 w-100">Send</button>
+                            <button type="submit" class="btn button-style text-uppercase mt-3 w-100">Send</button>
                         </div>
                     </form>
                 </div>
