--- a/tours.html
+++ b/tours.html
@@ -89,8 +89,8 @@
                     </div>
 
                 </div>
-                <div class="col-sm-12 col-md-4 border-color p-3">
-                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
+                <div class="col-sm-12 col-md-4">
+                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true" class="border-color p-3">
                         <input type="hidden" name="subject" value="Contact Form - Tours">
                         <div class="form-group ml-4">
                             <div class="field">
@@ -116,7 +116,7 @@
                                 <div data-netlify-recaptcha="true"></div>
                             </div>
 
-                            <button type="submit" class="btn btn-dark text-uppercase mt-3 w-100">Send</button>
+                            <button type="submit" class="btn button-style text-uppercase mt-3 w-100">Send</button>
                         </div>
                     </form>
                 </div>
