--- a/our-fleet.html
+++ b/our-fleet.html
@@ -72,14 +72,76 @@
     </header>
 
 
-    <section class="page-section pt-5">
+    <section class="page-section" id="our-fleet">
         <div class="container">
-            <div class="row">
+            <div class="row text-center">
+                <div class="col-12 text-center">
+                    <h2 class="section-subheading text-muted"> Experience quality, luxury and style when you travel with
+                        us. <br> 
+                        All of our vehicles are valeted and presented to the highest standard, and provide Air
+                        Conditioning, Wi-Fi and chilled bottled water. </h2>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="our-fleet-img">
+                        <a href="#car-spec">
 
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-s-e_index_yr2kkz.webp"
+                                alt="Mercedes Benz E Class" loading="lazy">
+                        </a>
+                        <p class="text-uppercase"> Mercedes Benz E Class</p>
+                        <div class="text-muted">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="me-2">3</span>
+                            <i class="fa-solid fa-suitcase"></i>
+                            <span>3</span>
+                        </div>
+                        <div class="mt-4">
+                            <a class="btn rounded" href="availability.html">Book Your Trip Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="our-fleet-img">
+                        <a href="#car-spec">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-s-e_index_yr2kkz.webp"
+                                alt="Mercedes Benz S Class" loading="lazy">
+                        </a>
 
+                        <p class="text-uppercase"> Mercedes Benz S Class</p>
+                        <div class="text-muted">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="me-2">3</span>
+                            <i class="fa-solid fa-suitcase"></i>
+                            <span>3</span>
+                        </div>
+                        <div class="mt-4">
+                            <a class="btn rounded" href="availability.html">Book Your Trip Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="our-fleet-img">
+                        <a href="#car-spec">
+
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-v_index_qzis3g.webp"
+                                alt="Mercedes Benz V Class" loading="lazy">
+                        </a>
+                        <p class="text-uppercase"> Mercedes Benz V Class</p>
+                        <div class="text-muted">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="me-2">6</span>
+                            <i class="fa-solid fa-suitcase"></i>
+                            <span>6</span>
+                        </div>
+                        <div class="mt-4">
+                            <a class="btn rounded" href="availability.html">Book Your Trip Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
-
 
     <!-- Footer -->
     <footer class="footer py-4">
