Fixed and added padding to navigation right side

--- a/availability.html
+++ b/availability.html
@@ -37,7 +37,7 @@
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars fa-2xl"></i>
             </button>
-            <div class="collapse navbar-collapse pr-5" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse pe-5" id="navbarNavDropdown">
                 <ul class="navbar-nav text-uppercase ml-auto py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown dropdown-hover">
