--- a/our-fleet.html
+++ b/our-fleet.html
@@ -37,7 +37,7 @@
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars fa-2xl"></i>
             </button>
-            <div class="collapse navbar-collapse pr-5" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse pe-5" id="navbarNavDropdown">
                 <ul class="navbar-nav text-uppercase ml-auto py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown dropdown-hover">
@@ -55,8 +55,8 @@
                             <li><a class="dropdown-item" href="tours.html">Luxury Tours</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="our-fleet.html">Our Fleet</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="availability.html">Availability</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="our-fleet.html">Our Fleet</a></li>
+                    <li class="nav-item"><a class="nav-link" href="availability.html">Availability</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
