Bg image class created to target only bg image on query pages

--- a/availability.html
+++ b/availability.html
@@ -64,7 +64,7 @@
     </nav>
 
     <!-- Header image -->
-    <header class="header-forms">
+    <header class=" bg-query-fleet header-forms">
         <div class="container">
             <div class="heading">Request Availability</div>
 
