Bg image class added to separate bg image for query pages and car spec

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     </nav>
 
     <!-- Header image -->
-    <header class="header-forms">
+    <header class="bg-query-fleet header-forms">
         <div class="container">
             <div class="heading">Contact Us</div>
 
