Added sticky-top class to navigation accross all pages, car-spec title separated in h2 and span

--- a/availability.html
+++ b/availability.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid pe-4">
             <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg" width="100%"
                     height="100%" alt="Platinum Limo logo"></a>
