--- a/our-fleet.html
+++ b/our-fleet.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid pe-4">
         <a class="navbar-brand" href="index.html"
           ><img
@@ -127,21 +127,25 @@
       </div>
     </header>
 
+
+  
+        <div class="text-center mt-4 mx-3">
+          <h2 class="mb-3">
+            Experience quality, luxury and style when you travel with us.
+        </h2>
+            <span>
+                All of our vehicles are valeted and presented to the highest
+                standard, and provide Air Conditioning, Wi-Fi and chilled bottled
+                water.
+            </span>
+    
+         
+        </div>
+
     <section class="page-section" id="our-fleet">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-12 text-center">
-            <h2 class="section-subheading text-muted">
-              Experience quality, luxury and style when you travel with us.
-              <br />
-              All of our vehicles are valeted and presented to the highest
-              standard, and provide Air Conditioning, Wi-Fi and chilled bottled
-              water.
-            </h2>
-          </div>
-          </div>
           <div class="row">
-            <div class="col-sm-12 col-md-6 our-fleet-img">
+            <div class="col-sm-12 col-md-6 our-fleet-img mb-0">
               <a href="#car-spec">
                 <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-s-e_index_yr2kkz.webp"
                 alt="Mercedes Benz E Class" loading="lazy">
@@ -207,7 +211,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-12 col-md-6 our-fleet-img">
+                <div class="col-sm-12 col-md-6 our-fleet-img mb-0">
                   <a href="#car-spec">
                     <img
                       src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-s-e_index_yr2kkz.webp"
@@ -273,7 +277,7 @@
                 </div>
 <!-- V Class -->
                 <div class="row">
-                    <div class="col-sm-12 col-md-6 our-fleet-img">
+                    <div class="col-sm-12 col-md-6 our-fleet-img mb-0">
                       <a href="#car-spec">
                         <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-v_index_qzis3g.webp"
                         alt="Mercedes Benz V Class" loading="lazy">
