Index - Replaced special occasions image with the correct one

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <a class="services-link" href="special-occasions.html">
 
                             <img class="img-fluid" loading="lazy"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1681794443/Platinum%20Line%20images/special-occasions-index.webp"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1689147055/Platinum%20Line%20images/occasions_webp_compressedd_wlbuhs.jpg"
                                 alt="Special Occasion"> 
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Special occasion</div>
