Services pages - Corrected unnecessary margin around check icon

--- a/corporate.html
+++ b/corporate.html
@@ -89,7 +89,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-2"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
@@ -104,7 +104,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
 
@@ -114,21 +114,21 @@
 
                         <div class="row">
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
-                                <p class="d-inline pl-2">TRANSPORT TO AND FROM, CONFERENCES WITH MANAGEMENT OF LOGISTICS</p>
+                                <p>TRANSPORT TO AND FROM, CONFERENCES WITH MANAGEMENT OF LOGISTICS</p>
                             </div>
                         </div>
 
                         <div class="row">
 
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
-                                <p class="d-inline pl-2">FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
+                                <p>FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
                             </div>
 
 
