--- a/special-occasions.html
+++ b/special-occasions.html
@@ -91,7 +91,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-2"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
@@ -105,7 +105,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
 
@@ -115,11 +115,11 @@
 
                         <div class="row">
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
-                                <p class="d-inline pl-2">PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS
+                                <p>PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS
                                     FOR
                                     THE DAY</p>
                             </div>
@@ -128,7 +128,7 @@
                         <div class="row">
 
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
                                 <p class="d-inline pl-2">COMPLIMENTARY WATER ON BOARD</p>
