--- a/airport-transfer.html
+++ b/airport-transfer.html
@@ -95,7 +95,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-2"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
@@ -109,7 +109,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
 
@@ -119,21 +119,21 @@
 
                         <div class="row">
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
-                                <p class="d-inline pl-2">FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
+                                <p>FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
                             </div>
                         </div>
 
                         <div class="row">
 
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
-                                <p class="d-inline pl-2">PROFESSIONAL SIGNAGE AND A COURTEOUS GREETING</p>
+                                <p>PROFESSIONAL SIGNAGE AND A COURTEOUS GREETING</p>
                             </div>
 
 
