--- a/conference-conventions.html
+++ b/conference-conventions.html
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-2"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
@@ -110,7 +110,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
 
@@ -120,21 +120,21 @@
 
                         <div class="row">
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
-                                <p class="d-inline pl-2">EXECUTIVE CHAUFFEURS WHO KEEP TRACK OF FLIGHT INFORMATION</p>
+                                <p>EXECUTIVE CHAUFFEURS WHO KEEP TRACK OF FLIGHT INFORMATION</p>
                             </div>
                         </div>
 
                         <div class="row">
 
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
-                                <p class="d-inline pl-2">PROFESSIONAL SIGNAGE AND A COURTEOUS GREETING</p>
+                                <p>PROFESSIONAL SIGNAGE AND A COURTEOUS GREETING</p>
                             </div>
 
 
@@ -143,10 +143,10 @@
                         <div class="row">
 
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
-                                <p class="d-inline pl-2">FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
+                                <p>FREE CANCELLATION UP TO 24 HOURS IN ADVANCE</p>
                             </div>
 
 
