--- a/events.html
+++ b/events.html
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-2"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
@@ -110,7 +110,7 @@
                         <div class="row">
                             <div class="col-1">
 
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
 
@@ -120,11 +120,11 @@
 
                         <div class="row">
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
 
                             <div class="col-11">
-                                <p class="d-inline pl-2">PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS
+                                <p>PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS
                                     FOR
                                     THE DAY</p>
                             </div>
@@ -133,10 +133,10 @@
                         <div class="row">
 
                             <div class="col-1">
-                                <i class="fa fas fa-check mt-3"></i>
+                                <i class="fa fas fa-check"></i>
                             </div>
                             <div class="col-11">
-                                <p class="d-inline pl-2">COMPLIMENTARY WATER ON BOARD</p>
+                                <p>COMPLIMENTARY WATER ON BOARD</p>
                             </div>
 
 
