Car spec page - added margin to separate car images

--- a/our-fleet.html
+++ b/our-fleet.html
@@ -142,7 +142,7 @@
          
         </div>
 
-    <section class="page-section" id="our-fleet">
+    <section class="page-section">
       <div class="container">
           <div class="row">
             <div class="col-sm-12 col-md-6 our-fleet-img mb-0">
@@ -151,7 +151,7 @@
                 alt="Mercedes Benz E Class" loading="lazy">
               </a>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 mb-fleet-img pl-3">
              <div class="mt-4 services-checklist">
                 <div class="row">
                     <div class="col-1">
@@ -220,7 +220,7 @@
                     />
                   </a>
                 </div>
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6 mb-fleet-img pl-3">
                  <div class="mt-4 services-checklist">
                     <div class="row">
                         <div class="col-1">
