Images were too dark, replaced with original bright image

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <a class="services-link" href="events.html">
 
                             <img class="img-fluid"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1689147729/Platinum%20Line%20images/people-celebrating-party-modified_axetd8.jpg"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1692304786/Platinum%20Line%20images/people-celebrating-party_ozsco8.jpg"
                                 alt="Events" loading="lazy">
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Events</div>
@@ -185,7 +185,7 @@
                         <a class="services-link" href="airport-transfer.html">
 
                             <img class="img-fluid"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1689107382/Platinum%20Line%20images/airport_tmqmuq.jpg"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1692304651/Platinum%20Line%20images/businesswoman-getting-taxi-cab-modified_kowcnk.jpg"
                                 alt="Airport Transfer" loading="lazy">
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Airport Transfer</div>
@@ -216,7 +216,7 @@
                         <a class="services-link" href="corporate.html">
 
                             <img class="img-fluid" loading="lazy"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1689024851/Platinum%20Line%20images/corporate_wba3qa.jpg"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1691528641/young-male-being-uber-driver-female-client_unvvb1.jpg"
                                 alt="Corporate Services">
 
                             <div class="services-caption">
@@ -232,7 +232,7 @@
                         <a class="services-link" href="tours.html">
 
                             <img class="img-fluid" loading="lazy"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1689147135/Platinum%20Line%20images/breathtaking-high-angle-shot-cliffs-near-pure-water-eaglehawk-neck-australia-modified_h7cqua.jpg"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1692304308/Platinum%20Line%20images/tours.webp"
                                 alt="Tours">
 
                             <div class="services-caption">
