header images fixed, too bright

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <a class="services-link" href="corporate.html">
 
                             <img class="img-fluid" loading="lazy"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1691528641/young-male-being-uber-driver-female-client_unvvb1.jpg"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1692304582/Platinum%20Line%20images/pexels-pavel-danilyuk-8425044-modified_1_c1z8ja.jpg"
                                 alt="Corporate Services">
 
                             <div class="services-caption">
