Footer links fixed, added the correct path and removed extra margin from the our fleet bg image

--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
                     <a href="#top-page" class="text-decoration-none text-light">Home</a>
                 </p>
                 <p>
-                    <a href="#" class="text-decoration-none text-light">Services</a>
+                    <a href="#services" class="text-decoration-none text-light">Services</a>
                 </p>
                 <p>
-                    <a href="#" class="text-decoration-none text-light">Our Fleet</a>
+                    <a href="our-fleet.html" class="text-decoration-none text-light">Our Fleet</a>
                 </p>
                 <p>
                     <a href="availability.html" class="text-decoration-none text-light">Availability</a>
