--- a/availability.html
+++ b/availability.html
@@ -269,6 +269,23 @@
         link="preload">
         </script>
     <script src="assets/script.js"></script>
+<script> 
+// Script to disable dates in the past
+    var date = new Date()
+    var tdate = date.getDate()
+    var month = date.getMonth() + 1;
+    var year = date.getUTCFullYear();
+    if(tdate < 10){
+        tdate = "0" + tdate;
+    }
+    if(month < 10){
+        month ="0" + month;
+    }
+    
+    var minDate = year + "-" + month + "-" + tdate;
+    document.getElementById("date").setAttribute('min', minDate)
+</script>
+
 
 </body>
 
