--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         content="Ireland, Dublin, Chauffer Services, Mercedes Benz, Mercedes Benz S Class, Mercedes Bens E Class, Mercedes Benz V Class, Special Occasions, Events, Airport Transfer, Conference & Conventions, Corporate Services, Luxury Tours">
     <title>Platinum Limo - Chauffeur Services</title>
 
+    <!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
     <!-- Google Fonts -->
     <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Spectral:wght@300&display=swap">
 
