--- a/index.html
+++ b/index.html
@@ -452,28 +452,26 @@
                     Services
                 </h5>
                 <p>
-                    <a class="portfolio-link text-decoration-none text-light" data-bs-toggle="modal"
-                        href="#">Special Occasions</a>
+                    <a class="text-decoration-none text-light"
+                        href="special-occasions.html">Special Occasions</a>
                 </p>
                 <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Events</a>
+                    <a href="events.html" class="text-decoration-none text-light">Events</a>
                 </p>
                 <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Airport Transfer</a>
+                    <a href="airport-transfer.html"
+                        class="text-decoration-none text-light">Airport Transfer</a>
                 </p>
                 <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Conferences & Conventions</a>
+                    <a href="conference-conventions.html"
+                        class="text-decoration-none text-light">Conferences & Conventions</a>
                 </p>
                 <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Corporate services</a>
+                    <a href="corporate.html" class="text-decoration-none text-light">Corporate services</a>
                 </p>
                 <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Luxury Tours</a>
+                    <a href="tours.html"
+                        class="text-decoration-none text-light">Luxury Tours</a>
                 </p>
             </div>
             <div class="col-sm-12 col-md-4 text-light">
