--- a/our-fleet.html
+++ b/our-fleet.html
@@ -346,130 +346,86 @@
     <!-- Footer -->
     <footer class="footer py-4">
       <div class="container">
-        <div class="row">
-          <div class="col-12 mb-5">
-            <div class="logo-footer">
-              <img
-                class="img-fluid"
-                src="assets/images/navbar-logo.svg"
-                alt="Platinum Limo Logo"
-              />
-            </div>
+          <div class="row">
+              <div class="col-12 mb-5">
+                  <div class="logo-footer">
+                      <img class="img-fluid" src="assets/images/navbar-logo.svg" alt="Platinum Limo Logo">
+                  </div>
+              </div>
+              <div class="content-to-hide-sm col-md-4">
+                  <h5 class="text-uppercase mb-4 text-light">
+                      Navgation
+                  </h5>
+                  <p>
+                      <a href="#top-page" class="text-decoration-none text-light">Home</a>
+                  </p>
+                  <p>
+                      <a href="index.html#services" class="text-decoration-none text-light">Services</a>
+                  </p>
+                  <p>
+                      <a href="our-fleet.html" class="text-decoration-none text-light">Our Fleet</a>
+                  </p>
+                  <p>
+                      <a href="availability.html" class="text-decoration-none text-light">Availability</a>
+                  </p>
+                  <p>
+                      <a href="contact.html" class="text-decoration-none text-light">Contact</a>
+                  </p>
+              </div>
+              <div class="content-to-hide-sm col-md-4">
+                  <h5 class="text-uppercase mb-4 text-light">
+                      Services
+                  </h5>
+                  <p>
+                      <a class="text-decoration-none text-light"
+                          href="special-occasions.html">Special Occasions</a>
+                  </p>
+                  <p>
+                      <a href="events.html" class="text-decoration-none text-light">Events</a>
+                  </p>
+                  <p>
+                      <a href="airport-transfer.html"
+                          class="text-decoration-none text-light">Airport Transfer</a>
+                  </p>
+                  <p>
+                      <a href="conference-conventions.html"
+                          class="text-decoration-none text-light">Conferences & Conventions</a>
+                  </p>
+                  <p>
+                      <a href="corporate.html" class="text-decoration-none text-light">Corporate services</a>
+                  </p>
+                  <p>
+                      <a href="tours.html"
+                          class="text-decoration-none text-light">Luxury Tours</a>
+                  </p>
+              </div>
+              <div class="col-sm-12 col-md-4 text-light">
+                  <h5 class="text-uppercase mb-4 text-light">
+                      Contact us
+                  </h5>
+                  <p>
+                      <i class="fas fa-envelope me-3"></i>
+                      reservations@platinumlimo.ie
+                  </p>
+                  <p><i class="fas fa-phone me-3"></i> + 353 83 084 7748</p>
+              </div>
+              <div class="col-12">
+                  <p class="text-uppercase text-light mt-5 text-center"> Copyright © Platinum Limo. Website
+                      designed by Iris Smok</p>
+              </div>
+              <div class="col-12 text-center text-uppercase footer-link-policy">
+                  <a href="privacy_policy.html" class="text-decoration-none text-light me-5">Privacy Policy</a>
+                  <a href="terms_conditions.html" class="text-decoration-none text-light">Terms & Condistions</a>
+
+              </div>
+              <div class="col-12 text-center mt-5">
+                  <a class="btn btn-outline-light m-1" target="_blank"
+                      href="https://www.facebook.com/profile.php?id=100087923757606" role="button"><i
+                          class="fab fa-facebook-f"></i></a>
+              </div>
           </div>
-          <div class="content-to-hide-sm col-md-4">
-            <h5 class="text-uppercase mb-4 text-light">Navgation</h5>
-            <p>
-              <a href="#top-page" class="text-decoration-none text-light"
-                >Home</a
-              >
-            </p>
-            <p>
-              <a href="#" class="text-decoration-none text-light">Services</a>
-            </p>
-            <p>
-              <a href="#" class="text-decoration-none text-light">Our Fleet</a>
-            </p>
-            <p>
-              <a
-                href="availability.html"
-                class="text-decoration-none text-light"
-                >Availability</a
-              >
-            </p>
-            <p>
-              <a href="contact.html" class="text-decoration-none text-light"
-                >Contact</a
-              >
-            </p>
-          </div>
-          <div class="content-to-hide-sm col-md-4">
-            <h5 class="text-uppercase mb-4 text-light">Services</h5>
-            <p>
-              <a
-                class="portfolio-link text-decoration-none text-light"
-                data-bs-toggle="modal"
-                href="#"
-                >Special Occasions</a
-              >
-            </p>
-            <p>
-              <a
-                href="#"
-                data-bs-toggle="modal"
-                class="portfolio-link text-decoration-none text-light"
-                >Events</a
-              >
-            </p>
-            <p>
-              <a
-                href="#"
-                data-bs-toggle="modal"
-                class="portfolio-link text-decoration-none text-light"
-                >Airport Transfer</a
-              >
-            </p>
-            <p>
-              <a
-                href="#"
-                data-bs-toggle="modal"
-                class="portfolio-link text-decoration-none text-light"
-                >Conferences & Conventions</a
-              >
-            </p>
-            <p>
-              <a
-                href="#"
-                data-bs-toggle="modal"
-                class="portfolio-link text-decoration-none text-light"
-                >Corporate services</a
-              >
-            </p>
-            <p>
-              <a
-                href="#"
-                data-bs-toggle="modal"
-                class="portfolio-link text-decoration-none text-light"
-                >Luxury Tours</a
-              >
-            </p>
-          </div>
-          <div class="col-sm-12 col-md-4 text-light">
-            <h5 class="text-uppercase mb-4 text-light">Contact us</h5>
-            <p>
-              <i class="fas fa-envelope me-3"></i>
-              reservations@platinumlimo.ie
-            </p>
-            <p><i class="fas fa-phone me-3"></i> + 353 83 084 7748</p>
-          </div>
-          <div class="col-12">
-            <p class="text-uppercase text-light mt-5 text-center">
-              Copyright © Platinum Limo. Website designed by Iris Smok
-            </p>
-          </div>
-          <div class="col-12 text-center text-uppercase footer-link-policy">
-            <a
-              href="privacy_policy.html"
-              class="text-decoration-none text-light me-5"
-              >Privacy Policy</a
-            >
-            <a
-              href="terms_conditions.html"
-              class="text-decoration-none text-light"
-              >Terms & Condistions</a
-            >
-          </div>
-          <div class="col-12 text-center mt-5">
-            <a
-              class="btn btn-outline-light m-1"
-              target="_blank"
-              href="https://www.facebook.com/profile.php?id=100087923757606"
-              role="button"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-          </div>
-        </div>
       </div>
-    </footer>
+  </footer>
 
     <!-- Font Awesome icons (free version)-->
     <script
